feat: add custom prompt

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -20,6 +20,9 @@
     "selectAll": "Select All",
     "totalChapters": "Total {{count}} chapters",
     "selectedChapters": "{{count}} chapters selected",
+    "customPrompt": "Custom Prompt",
+    "customPromptPlaceholder": "Enter custom prompt here, it will be appended to AI requests...",
+    "customPromptDescription": "Optional: Add custom prompt to guide AI to generate content that better meets your needs",
     "startProcessing": "Start Processing",
     "processing": "Processing...",
     "apiKeyRequired": "Please enter API Key in configuration first",
