--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -20,6 +20,9 @@
     "selectAll": "全选",
     "totalChapters": "共 {{count}} 章",
     "selectedChapters": "已选择 {{count}} 章",
+    "customPrompt": "补充提示词",
+    "customPromptPlaceholder": "在此输入自定义提示词，将会拼接到AI请求中...",
+    "customPromptDescription": "可选：添加自定义提示词来指导AI生成更符合您需求的内容",
     "startProcessing": "开始解析",
     "processing": "处理中...",
     "apiKeyRequired": "请先在配置中填写 API Key",
