feat: split into 2 step

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -124,6 +124,7 @@
     "language": "Language",
     "viewContent": "View Content",
     "backToTop": "Back to Top",
+    "backToConfig": "Back to Config",
     "openInMindElixir": "Open in Mind Elixir Desktop",
     "clearCache": "Clear Cache",
     "copiedToClipboard": "Copied to clipboard",
