feat: add collapse button for markdown card

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -130,7 +130,9 @@
     "copiedToClipboard": "Copied to clipboard",
     "copyChapterSummary": "Copy Chapter Summary",
     "copyChapterContent": "Copy Chapter Content",
-    "copyContent": "Copy Content"
+    "copyContent": "Copy Content",
+    "expand": "Expand",
+    "collapse": "Collapse"
   },
   "config": {
     "title": "Configuration",
