feat: add API URL input hints for different AI providers
- Add helpful descriptions below API URL input fields
- Provide specific guidance for each AI provider:
  - Gemini: General API address format guidance
  - OpenAI: Official API address reference
  - Ollama: Local default address information
  - 302.AI: Auto-configuration notice
- Add Chinese translations for all API URL descriptions
- Add English translations for all API URL descriptions
- Improve user experience with clear configuration guidance
- Help users understand correct API address formats
- Reduce configuration errors with contextual hints

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -134,6 +134,10 @@
     "expand": "Expand",
     "collapse": "Collapse"
   },
+  "tabs": {
+    "setup": "Setup",
+    "processing": "Processing"
+  },
   "config": {
     "title": "Configuration",
     "aiServiceConfig": "AI Service Configuration",
@@ -181,7 +185,42 @@
     "outputLanguageEn": "English",
     "outputLanguageZh": "Chinese",
     "outputLanguageDescription": "Control the language of AI-generated content. Auto mode will follow the current interface language.",
-    "visitSite": "Visit Website"
+    "visitSite": "Visit Website",
+    "chapterDetectionMode": "Smart Chapter Detection",
+    "selectDetectionMode": "Select Chapter Detection Mode",
+    "normalMode": "Normal Mode",
+    "normalModeDescription": "Use basic chapter recognition algorithm, suitable for most books",
+    "smartDetectionMode": "Smart Detection Mode",
+    "smartDetectionModeDescription": "Use AI to intelligently identify chapter boundaries with higher accuracy but longer processing time",
+    "epubTocMode": "EPUB TOC Mode",
+    "epubTocModeDescription": "Strictly extract chapters according to EPUB file's table of contents structure, maintaining original hierarchy",
+    "epubTocDepth": "TOC Depth Level",
+    "selectEpubTocDepth": "Select TOC Depth",
+    "epubTocDepth1": "Level 1 (Main Chapters)",
+    "epubTocDepth2": "Level 2 (Sub-chapters)",
+    "epubTocDepth3": "Level 3 (Sections)",
+    "epubTocDepth4": "Level 4 (Detailed Sections)",
+    "epubTocDepth5": "Level 5 (Finest Granularity)",
+    "epubTocDepthDescription": "Select the directory hierarchy depth to extract. Higher values extract more detailed chapters",
+    "chapterAndNotificationSettings": "Chapter and Notification Settings",
+    "chapterNamingMode": "Chapter Naming Mode",
+    "selectChapterNamingMode": "Select Chapter Naming Mode",
+    "autoNaming": "Auto-detect Chapter Names",
+    "numberedNaming": "Chapter X Format",
+    "chapterNamingModeDescription": "Choose the naming style for chapter titles",
+    "notificationSettings": "Notification Settings",
+    "enableNotification": "Enable Task Completion Notifications",
+    "notificationDescription": "Send browser notifications when tasks are completed",
+    "chapterPreview": "Chapter Preview",
+    "noChaptersFound": "No chapters found for preview",
+    "loadingPreview": "Loading chapter preview...",
+    "proxySettings": "Proxy Settings",
+    "enableProxy": "Enable Proxy",
+    "proxyUrlDescription": "Enter the complete URL address of the proxy server, for example: http://proxy.example.com:8080",
+    "geminiApiUrlDescription": "Please enter the complete API address, including protocol (http:// or https://)",
+    "openaiApiUrlDescription": "OpenAI official API address: https://api.openai.com/v1",
+    "ollamaApiUrlDescription": "Local Ollama default address: http://localhost:11434",
+    "ai302ApiUrlDescription": "302.AI API address is automatically configured"
   },
   "download": {
     "title": "Download Mind Map",
