--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -96,6 +96,10 @@
     "collapse": "折叠",
     "error": "未知错误"
   },
+  "tabs": {
+    "setup": "设置",
+    "processing": "处理"
+  },
   "config": {
     "title": "配置",
     "aiServiceConfig": "AI 服务配置",
@@ -143,7 +147,42 @@
     "outputLanguageEn": "英文",
     "outputLanguageZh": "中文",
     "outputLanguageDescription": "控制AI生成内容的语言。自动模式将跟随当前界面语言。",
-    "visitSite": "访问官网"
+    "visitSite": "访问官网",
+    "chapterDetectionMode": "智能检测章节",
+    "selectDetectionMode": "选择章节识别模式",
+    "normalMode": "普通模式",
+    "normalModeDescription": "使用基础的章节识别算法，适用于大多数书籍",
+    "smartDetectionMode": "智能检测章节模式",
+    "smartDetectionModeDescription": "使用AI智能识别章节边界，准确率更高但处理时间较长",
+    "epubTocMode": "以epub目录读取章节的模式",
+    "epubTocModeDescription": "严格按照EPUB文件的目录结构提取章节，保持原始层级关系",
+    "epubTocDepth": "关注第几级目录",
+    "selectEpubTocDepth": "选择目录深度",
+    "epubTocDepth1": "第1级目录（主要章节）",
+    "epubTocDepth2": "第2级目录（子章节）",
+    "epubTocDepth3": "第3级目录（小节）",
+    "epubTocDepth4": "第4级目录（详细小节）",
+    "epubTocDepth5": "第5级目录（最细粒度）",
+    "epubTocDepthDescription": "选择要提取的目录层级深度，数值越大提取的章节越详细",
+    "chapterAndNotificationSettings": "章节和通知设置",
+    "chapterNamingMode": "章节命名模式",
+    "selectChapterNamingMode": "选择章节命名模式",
+    "autoNaming": "自动识别章节名称",
+    "numberedNaming": "第x章格式",
+    "chapterNamingModeDescription": "选择章节标题的命名方式",
+    "notificationSettings": "通知设置",
+    "enableNotification": "启用任务完成通知",
+    "notificationDescription": "任务执行完成后发送浏览器通知",
+    "chapterPreview": "章节预览",
+    "noChaptersFound": "未找到章节预览",
+    "loadingPreview": "正在加载章节预览...",
+    "proxySettings": "代理设置",
+    "enableProxy": "启用代理",
+    "proxyUrlDescription": "输入代理服务器的完整URL地址，例如：http://proxy.example.com:8080",
+    "geminiApiUrlDescription": "请输入完整的API地址，包含协议（http://或https://）",
+    "openaiApiUrlDescription": "OpenAI官方API地址：https://api.openai.com/v1",
+    "ollamaApiUrlDescription": "本地Ollama默认地址：http://localhost:11434",
+    "ai302ApiUrlDescription": "302.AI的API地址已自动配置"
   },
   "download": {
     "title": "下载思维导图",
