feat: 添加预览窗口字体控制和全屏功能，完善主题适配和翻译
## 新功能
- 预览窗口右上角添加字体大小调节按钮（12px-24px）
- 预览窗口右上角添加全屏/退出全屏按钮
- 全屏模式下文字显示区域自适应屏幕高度
- 支持外部控制和内部控制两种模式

## 主题适配修复
- 修复浅色模式下预览界面依旧是深色风格的问题
- 使用 useTheme hook 获取准确的主题状态
- 添加系统主题变化监听，支持 'system' 主题模式
- Shadow DOM 样式实时响应主题切换

## 翻译完善
- 添加缺失的 upload.clickToOverwrite 和 upload.reupload 翻译
- 添加完整的 MindElixir 相关翻译（错误提示、帮助信息等）
- 添加 progress.startProcessing 翻译
- 添加字体控制和全屏功能的翻译键

## UI/UX 改进
- 字体控制按钮只在 EPUB 文件时显示
- 全屏模式下使用固定定位和内联样式确保布局
- 按钮状态管理（禁用状态、工具提示等）
- 保持滚动位置和用户状态

## 技术优化
- EpubReader 组件支持外部字体大小和全屏控制
- 使用 useEffect 依赖实现主题响应式更新
- 优化全屏模式的高度计算和布局
- 清理事件监听器防止内存泄漏

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -13,7 +13,17 @@
     "extractChapters": "Extract Chapters",
     "extractingChapters": "Extracting chapters...",
     "invalidFile": "Please select a valid EPUB or PDF file",
-    "pleaseSelectFile": "Please select a file"
+    "pleaseSelectFile": "Please select a file",
+    "upload": "Upload",
+    "uploading": "Uploading...",
+    "uploaded": "Uploaded",
+    "exists": "Exists on Cloud",
+    "uploadToWebDAV": "Upload to WebDAV",
+    "confirmOverwrite": "Confirm Overwrite File",
+    "fileExistsMessage": "File \"{fileName}\" already exists on WebDAV cloud, do you want to overwrite it?",
+    "overwrite": "Overwrite",
+    "clickToOverwrite": "Click to Upload and Overwrite",
+    "reupload": "Re-upload"
   },
   "chapters": {
     "title": "Chapter Selection",
@@ -33,6 +43,7 @@
     "extractingEpub": "Parsing EPUB file...",
     "extractingPdf": "Parsing PDF file...",
     "extractingChapters": "Extracting chapter content...",
+    "startProcessing": "Start Processing",
     "processingChapter": "Processing chapter {{current}}/{{total}}: {{title}}",
     "analyzingConnections": "Analyzing chapter connections...",
     "generatingOverallSummary": "Generating overall summary...",
@@ -85,11 +96,28 @@
     }
   },
   "mindElixir": {
-    "launchSuccess": "Successfully sent \"{{title}}\" to Mind Elixir Desktop",
-    "launchError": "Failed to launch Mind Elixir Desktop, please ensure Mind Elixir Desktop app is installed",
+    "launchSuccess": "Successfully sent to Mind Elixir Desktop",
+    "launchError": "Failed to launch Mind Elixir Desktop",
+    "exportError": "Failed to export mind map",
+    "launching": "Mind Elixir is launching, please wait...",
+    "launchingTitle": "Trying to launch Mind Elixir Desktop...",
+    "launchFailed": "Failed to launch Mind Elixir",
+    "cannotConnect": "Cannot connect to Mind Elixir Desktop",
+    "cannotConnectDetail": "Please start the Mind Elixir Desktop application",
+    "notInstalled": "Mind Elixir Desktop is not installed",
+    "notInstalledDetail": "Please install Mind Elixir Desktop application first",
+    "connectionTimeout": "Mind Elixir Desktop connection timeout",
+    "connectionTimeoutDetail": "Please ensure Mind Elixir Desktop is running",
+    "download": "Download",
     "exportSuccess": "{{title}} successfully exported as {{format}} format",
-    "exportError": "Failed to export {{format}} format: {{error}}",
-    "unsupportedFormat": "Unsupported format: {{format}}"
+    "exportFailed": "Export failed: {{error}}",
+    "unsupportedFormat": "Unsupported format: {{format}}",
+    "help": {
+      "title": "💡 Mind Elixir Desktop Installation Help:",
+      "step1": "1. Please visit https://mind-elixir.com/ to download and install Mind Elixir Desktop",
+      "step2": "2. After installation, ensure the application is running",
+      "step3": "3. Click the \"Open in Mind Elixir\" button again"
+    }
   },
   "backToTop": "Back to Top",
   "common": {
