feat: 修复HTML格式支持，添加下划线等标签支持

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -206,7 +206,7 @@
   },
   "config": {
     "title": "Configuration",
-    "aiServiceConfig": "AI Service Configuration",
+    "aiServiceConfig": "Normal",
     "description": "Configure AI services and processing options",
     "aiProvider": "AI Provider",
     "selectAiProvider": "Select AI Provider",
