--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -171,7 +171,7 @@
   },
   "config": {
     "title": "配置",
-    "aiServiceConfig": "AI 服务配置",
+    "aiServiceConfig": "常规",
     "description": "配置 AI 服务和处理选项",
     "aiProvider": "AI 提供商",
     "selectAiProvider": "选择 AI 提供商",
